fix: made the carousel functional on mobile

--- a/components/Landing/Trees/trees.module.scss
+++ b/components/Landing/Trees/trees.module.scss
@@ -16,6 +16,7 @@
 
 .gradient {
   position: absolute;
+  pointer-events: none;
   bottom: -20px;
   display: none;
   width: 100vw;
